--- a/how_to's.html
+++ b/how_to's.html
@@ -383,7 +383,7 @@ img {
 <p>4. Install latest UHD from ettus and UmTRX module  </p>
 
 <p><h3>Warning: moving to the new driver first and then attempting to upgrade the firmware may brick your UmTRX!</h3></p>
-<p>1. Install old monolithic Fairwaves <a href="https://github.com/fairwaves/UHD-Fairwaves/tree/fairwaves/umtrx/host">UHD</a> (banch* fairwaves/umtrx)</p>
+<p>1. Install old monolithic Fairwaves <a href="https://github.com/fairwaves/UHD-Fairwaves/tree/fairwaves/umtrx/host">UHD</a> (branch* fairwaves/umtrx)</p>
 <h4>Upgrade firmware</h4>
 <p>Binary firmware releases can also be found in the GitHub repo, in the <a href="https://github.com/fairwaves/UHD-Fairwaves/tree/umtrx_update/images">images directory</a>.</p>
 <p>A utility provided by <a href="https://github.com/fairwaves/UHD-Fairwaves/tree/umtrx_update/host/utils">UHD-Fairwaves</a>.</p>
