--- a/umsite.html
+++ b/umsite.html
@@ -485,7 +485,7 @@ img {
 <li>2. Test RAM memory</li>
 </ol>
 <p><img src="http://s017.radikal.ru/i443/1503/23/6b5a8596dac4.jpg" /></p>
-<p>First of all you have to use <strong>USB Serial Adapter</strong> for the connection (which is not comes with the UmSITE).</p>
+<p>First of all you have to use <strong>USB Serial Adapter</strong> for the connection (which is not included in a standard UmSITE package).</p>
 <p>For the Windows user use <a href="www.putty.org" title="PuTTY"><strong>putty</strong></a> </p>
 <p><img src="http://s017.radikal.ru/i413/1503/ad/0b02ea2dc90f.png" /></p>
 <p>Number of the COM port you will be able to find it in the  <strong>Desktop manager</strong> when you are connecting to the laptop. </p>
