--- a/how_to's.html
+++ b/how_to's.html
@@ -392,11 +392,11 @@ img {
 </code></pre>
 
 <h3><p>Load production firmware:</p></h3>
-<pre><code>./umtrx_net_burner --addr=192.168.10.2 --fpga=u2plus_umtrx_v2_test_pa.bin --fw=umtrx_txrx_uhd.bin
+<pre><code>./umtrx_net_burner --addr=192.168.10.2 --fpga=u2plus_umtrx_v2.bin --fw=umtrx_txrx_uhd.bin
 </code></pre>
 
 <p><h3>Load safe firmaware:</h3></p>
-<pre><code>./umtrx_net_burner --addr=192.168.10.2 --fpga=u2plus_umtrx_v2_test_pa.bin --overwrite-safe
+<pre><code>./umtrx_net_burner --addr=192.168.10.2 --fpga=u2plus_umtrx_v2.bin --overwrite-safe
 </code></pre>
 
 <p>detailed instruction how to:  <strong><a href="http://umtrx.org/hardware/flashing/">umtrx.org</a></strong></p>
