--- a/faq.html
+++ b/faq.html
@@ -41,6 +41,30 @@
                         <div class="grid_4">
 						 <h5 style="text-align: center;" class="font_5">02</h5>
 						  <div class="s2"></div>
+						  <h2 class="faq">What is included in the shipment?</h2>
+						  <center><p>
+                          <br>
+                          1.Base station with already installed and configured software
+                          <br>
+2. Power supply
+<br>
+3. GPS antenna</p></center>
+
+
+						</div>
+
+                        <div class="grid_4">
+						 <h5 style="text-align: center;" class="font_5">03</h5>
+						  <div class="s2"></div>
+						  <h2 class="faq">How does affect installation without GPS antenna on the system?</h2>
+						  <center><p>We strongly recommend to use GPS antenna, however it possible to work without it ,but it's may cause the problem of cell phone registration to the network in terms of surrounding GSM networks, cell phone model, temperature. Once the phone has registered to network, GPS does not affect on productivity of the system at all.</p></center>
+
+
+						</div>
+
+                        <div class="grid_4">
+						 <h5 style="text-align: center;" class="font_5">04</h5>
+						  <div class="s2"></div>
 						  <h2 class="faq">How does the system handle handover between MultiBTS systems?</h2>
 						  <center><p>BSC on a separate server. We use intra BSC handover. How to set up, described below in technical chapter.</p></center>
 
@@ -48,7 +72,7 @@
 						</div>
 
                         <div class="grid_4">
-						 <h5 style="text-align: center;" class="font_5">03</h5>
+						 <h5 style="text-align: center;" class="font_5">05</h5>
 						  <div class="s2"></div>
 						  <h2 class="faq">How is roaming handled?</h2>
 						  <center><p>It depends on the type of core network There are several options to implement and it is better to know your current situation and requirements.</p></center>
@@ -57,7 +81,7 @@
 						</div>
 
                         <div class="grid_4">
-						 <h5 style="text-align: center;" class="font_5">04</h5>
+						 <h5 style="text-align: center;" class="font_5">06</h5>
 						  <div class="s2"></div>
 						  <h2 class="faq">What is your radius coverage?</h2>
 						  <center><p>up to 200 m with 200mW (no external apmlifier),
@@ -70,7 +94,7 @@
 						</div>
 
                         <div class="grid_4">
-						 <h5 style="text-align: center;" class="font_5">05</h5>
+						 <h5 style="text-align: center;" class="font_5">07</h5>
 						  <div class="s2"></div>
 						  <h2 class="faq">Do you have a specific simcards or usual simcards can be used?
 
@@ -82,7 +106,7 @@
 						</div>
 
                         <div class="grid_4">
-						 <h5 style="text-align: center;" class="font_5">06</h5>
+						 <h5 style="text-align: center;" class="font_5">08</h5>
 						  <div class="s2"></div>
 						  <h2 class="faq">What is capacity of the subscriber database?
 
@@ -94,7 +118,7 @@
 						</div>
 
                         <div class="grid_4">
-						 <h5 style="text-align: center;" class="font_5">07</h5>
+						 <h5 style="text-align: center;" class="font_5">09</h5>
 						  <div class="s2"></div>
 						  <h2 class="faq">Will the UMTRX work with UMTS?
 
@@ -107,7 +131,7 @@
 						</div>
 
                         <div class="grid_4">
-						 <h5 style="text-align: center;" class="font_5">08</h5>
+						 <h5 style="text-align: center;" class="font_5">10</h5>
 						  <div class="s2"></div>
 						  <h2 class="faq">How do you handle SMS and GPRS in your systems?
 
@@ -120,7 +144,7 @@
 
 
                         <div class="grid_4">
-						 <h5 style="text-align: center;" class="font_5">09</h5>
+						 <h5 style="text-align: center;" class="font_5">11</h5>
 						  <div class="s2"></div>
 						  <h2 class="faq">Is it possible to connect through the ISUP/SIP-T as a MSC-MSC?
 
@@ -134,7 +158,7 @@
 
 
                         <div class="grid_4">
-						 <h5 style="text-align: center;" class="font_5">10</h5>
+						 <h5 style="text-align: center;" class="font_5">12</h5>
 						  <div class="s2"></div>
 						  <h2 class="faq">Does the SGSN and GGSN are implemented?
 
@@ -146,7 +170,7 @@
 						</div>
 
                         <div class="grid_4">
-						 <h5 style="text-align: center;" class="font_5">11</h5>
+						 <h5 style="text-align: center;" class="font_5">13</h5>
 						  <div class="s2"></div>
 						  <h2 class="faq"> How to assign different external DIDs to different mobile phones?
 
@@ -159,7 +183,7 @@
 						</div>
 
                         <div class="grid_4">
-						 <h5 style="text-align: center;" class="font_5">12</h5>
+						 <h5 style="text-align: center;" class="font_5">14</h5>
 						  <div class="s2"></div>
 						  <h2 class="faq"> How does subscribers pay bills in terms of village service?
 
@@ -171,7 +195,7 @@
 						</div>
 
                         <div class="grid_4">
-						 <h5 style="text-align: center;" class="font_5">13</h5>
+						 <h5 style="text-align: center;" class="font_5">15</h5>
 						  <div class="s2"></div>
 						  <h2 class="faq"> How does subscribers provision to network, SIM Cards or Phone?
 
@@ -185,7 +209,7 @@
 
 
                         <div class="grid_4">
-						 <h5 style="text-align: center;" class="font_5">14</h5>
+						 <h5 style="text-align: center;" class="font_5">16</h5>
 						  <div class="s2"></div>
 						  <h2 class="faq"> How is the billing system interconnected with MNO?
 
@@ -198,7 +222,7 @@
 
 
                         <div class="grid_4">
-						 <h5 style="text-align: center;" class="font_5">15</h5>
+						 <h5 style="text-align: center;" class="font_5">17</h5>
 						  <div class="s2"></div>
 						  <h2 class="faq"> Is it possible to connect external BTS to the network through A-bis interface?
 
@@ -211,7 +235,7 @@
 
 
                          <div class="grid_4">
-						 <h5 style="text-align: center;" class="font_5">16</h5>
+						 <h5 style="text-align: center;" class="font_5">18</h5>
 						  <div class="s2"></div>
 						  <h2 class="faq"> Is it possible to collect a segment of independent OpenBTS and OsmoBTS under OpenBSC/SIP controller for the Handover modeling?
 
@@ -224,12 +248,34 @@
 
 
                          <div class="grid_4">
-						 <h5 style="text-align: center;" class="font_5">17</h5>
+						 <h5 style="text-align: center;" class="font_5">19</h5>
 						  <div class="s2"></div>
 						  <h2 class="faq"> Does the SGSN and GGSN are implemented?
 
 </h2>
 						  <center><p>Yes, osmo-sgsn and openggsn. This is not a complete implementation of SGSN and GGSN. For more information refer to <a href="http://openbsc.osmocom.org/trac/wiki/OpenBSC_GPRS">Osmocom</a>.</p></center>
+
+
+
+						</div>
+
+                        <div class="grid_4">
+						 <h5 style="text-align: center;" class="font_5">20</h5>
+						  <div class="s2"></div>
+						  <h2 class="faq"> TRX0 frequency spectrum detected but TRX1 does not seem to be transmitting on the specified frequency. what is could be the issue?
+
+</h2>
+						  <center><p>According to the GSM Standard, only TRX0 has to transmit constantly.
+Secondary TRX's can transmit only when TRX0 would completely loaded.
+
+So if you want to see transmission on the TRX1 you should either:
+<br>
+1. have more than 6 active call legs (more than 3 acive calls)
+<br>
+2. set TRX0 configuration to SDCCH and leave TCH only on the TRX1 and make a call.
+<br>
+In other case you'll see that the transmission of TRX1 is not
+continuous, unless you have all TCH's on TRX1.</p></center>
 
 
 
