--- a/umdesk.html
+++ b/umdesk.html
@@ -37,9 +37,10 @@
 		<a href="#1.3 Hardware options"> 1.3 Hardware options</a>
 		<a href="#1.4 Software options"> 1.4 Software options</a>
 		<h4><a href="#2 Installation">2. Installation</a></h4>
-		<a href="#2.1 Device preparation">2.1 Device preparation</a>
-		<a href="#2.2 Log in">2.2 Log in</a></li>
-		<a href="#2.3 IP and network configuration (optional)">2.3 IP and network configuration (optional)</a></li>
+		<a href="#2.1 Getting started">2.1 Getting started</a>
+        <a href="#2.2 Test call">2.2 Test call</a></li>
+		<a href="#2.3 Log in">2.3 Log in</a></li>
+		<a href="#2.4 IP and network configuration (optional)">2.4 IP and network configuration (optional)</a></li>
 		</ul>
       </div>
       <div class="span9 main">
@@ -336,9 +337,10 @@ img {
 <p>1.3 Hardware Options</p>
 <p>1.4 Software options</p>
 <h4>2. Installation</h4>
-<p>2.1 Device preparation</p>
-<p>2.2 Log in</p>
-<p>2.3 IP and network configuration (optional) </p>
+<p>2.1 Getting started</p>
+<p>2.2 Test call
+<p>2.3 Log in</p>
+<p>2.4 IP and network configuration (optional) </p>
 <br>
 <br>
 <br>
@@ -453,40 +455,53 @@ img {
 </p>
 <h4><a name="2 Installation"></a>2. Installation<a class="anchorlink" href="#2 Installation"></a></h4>
 <br>
-<h4><a name="2.1 Device preparation"></a>2.1 Device preparation<a class="anchorlink" href="#2.1	Device preparation"></a></h4>
+<p>Base station comes with already installed and configured software</p>
+<h4><a name="2.1 Getting started"></a>2.1 Getting started<a class="anchorlink" href="#2.1	Getting started"></a></h4>
 <ol>
 <li>
-<p>Unwrap UmDESK. Devices comes already installed, which means you only need to attach the antenna, connect to power source and turn it on. </p>
+<p>&#8226 Connect to power source, attach GSM antennas, monitor and turn it on.</p>
 </li>
 <li>
-<p>&#8226 Check the LEDs on the front panel (Tx1 Rx1 Tx2 Rx2) if it lights, UmDESK works properly </p>
+<p>&#8226 Check the LEDs on the front panel (Tx1 Rx1 Tx2 Rx2) if it lights, UmDESK works properly.</p>
 </li>
 <li>
-<p>&#8226 Make sure the Ethernet cable connects UmTRX with UmDESK motherboard (as opposed to external Ethernet PCI card which is on the right corner of the back side panel UmDesk)</p>
+<p>&#8226 Make sure that Ethernet cable connected.</p>
+</li>
+<h4><a name="2.2 Test call"></a>2.2 Test call<a class="anchorlink" href="#2.2 Test call"></a></h4>
+<h4>Searching for the Network</h4>
+<ol>
+<li>
+<p> Launch the “Settings” from the menu system.</p>
 </li>
 <li>
-<p>&#8226 Now you can check if it works properly, take any GSM phone with any SIM card and try to connect to a new network. To search for your network go to setting / networks on your phone and choose one which is could have different names like <em>Fairwaves, 1 01, Test, etc</em>.</p>
+<p>1. Select “More.”</p>
+</li>
+<li>
+<p>2. Select “Mobile networks.”</p>
+</li>
+<li>
+<p>3. Select “Network operators.” </p>
+</li>
+<li>
+<p>4. Select “Search networks.”</p>
 </li>
 </ol>
-<h5>Here are a couple features you should try to make sure that everything works properly:</h5>
+<p><img src="http://s61.radikal.ru/i171/1505/07/60f9ce0b5a97.png" /></p>
+<p><strong>Options:</strong>
+</p>
 <ul>
 <li>
-<p>&#8226 Dial test numbers to check the voice service: 1001 to listen to some music, 1002 to listen to yourself (echo). </p>
+<p>&#8226 1002 - echo call (listen yourself) </p>
 </li>
 <li>
-<p>&#8226 Dial *#100# to figure the number that was assigned to your phone.
-</p>
-</li>
-<li>
-<p>&#8226 Connect another phone in the same manner and check if you can initiate calls and messages between the two phones.
+<p>&#8226 *#100# - to figure out the number that was assigned to your phone.
 </p>
 </li>
 </ul>
-<h4><a name="2.2 Log in"></a>2.2 Log in<a class="anchorlink" href="#2.2	Log in"></a></h4>
-<p>In order to configure and administer the UmDESK, you have to attach monitor, keyboard, mouse or login into device remotely over SSH. External Ethernet card is configured to get IP address via DHCP, and has a fixed <strong>192.168.50.100</strong>.  
-</p>
-<hr />
-<h6>Note:</h6>
+<h4><a name="2.3 Log in"></a>2.3 Log in<a class="anchorlink" href="#2.3	Log in"></a></h4>
+<p>In order to configure and administer the UmDESK, you have to attach monitor, keyboard, mouse or login into device remotely over SSH. External Interface configured to obtain IP address via DHCP and also has a static <u>192.168.50.100</u></p>
+
+<h3>Note:</h3>
 <p>Small inch monitors might have a displaying problem with console mode resolution. </p>
 <p>just add</p>
 <pre><code>blacklist gma500_gfx
@@ -498,8 +513,9 @@ img {
 <hr />
 
 <p>Connect laptop to the UmDESK via Ethernet cable.</p>
-<h6>Note:</h6>
-<p>Before startng to work with the device, set up IP address on laptop like this <strong>192.168.50.200</strong>  
+
+<h3>Note:</h3>
+<p>Before startng to work with the device, set up IP address on laptop like <u>192.168.50.200</u>
 </p>
 <ol>
 <li>1. Run PuTTY
@@ -511,7 +527,7 @@ img {
 </ol>
 <p>Once you have logged into the system, you will be at a Linux shell command prompt. </p>
 <p>You may use a deferent client software for remote access, but we recommend <strong>PuTTY</strong> (you can download at <a href="www.putty.org" title="PuTTY">www.putty.org</a> ).  PuTTY is an open source SSH and telnet client, for the Windows platform. </p>
-<h4><a name="2.3 IP and network configuration (optional)"></a>2.3 IP and network configuration (optional)<a class="anchorlink" href="#2.3 IP and network configuration (optional)"></a></h4>
+<h4><a name="2.4 IP and network configuration (optional)"></a>2.4 IP and network configuration (optional)<a class="anchorlink" href="#2.4 IP and network configuration (optional)"></a></h4>
 
 <p>If you would like to set another static address for the device, edit </p>
 <p><em>/etc/network/</em>interfaces  file:</p>
