--- a/umsite.html
+++ b/umsite.html
@@ -36,9 +36,10 @@
 		<a href="#1.2 Software specification">1.2 Software specification</a>
 		<a href="#1.3 Hardware options"> 1.3 Hardware options</a>
 		<h4><a href="#2 Installation">2. Installation</a></h4>
-		<a href="#2.1 Device preparation">2.1 Device preparation</a>
-		<a href="#2.2 Log in">2.2 Log in</a></li>
-		<a href="#2.3 IP and network configuration (optional)">2.3 IP and network configuration (optional)</a></li>
+		<a href="#2.1 Getting started">2.1 Getting started</a>
+        <a href="#2.2 Test call">2.2 Test call</a>
+		<a href="#2.3 Log in">2.3 Log in</a></li>
+		<a href="#2.4 IP and network configuration (optional)">2.4 IP and network configuration (optional)</a></li>
 		</ul>
       </div>
       <div class="span9 main">
@@ -335,9 +336,10 @@ img {
 <p>1.2 Software specification</p>
 <p>1.3 Hardware Options</p>
 <h4>2. Installation</h4>
-<p>2.1 Device preparation</p>
-<p>2.2 Log in</p>
-<p>2.3 IP and network configuration (optional) </p>
+<p>2.1 Getting started</p>
+<p>2.2 Test call
+<p>2.3 Log in</p>
+<p>2.4 IP and network configuration (optional) </p>
 <br>
 <br>
 <br>
@@ -434,74 +436,98 @@ img {
 </ul>
 <h4><a name="2 Installation"></a>2. Installation<a class="anchorlink" href="#2 Installation"></a></h4>
 <br>
-<h4><a name="2.1 Device preparation"></a>2.1 Device preparation<a class="anchorlink" href="#2.1	Device preparation"></a></h4>
+<p>Base station comes with already installed and configured software, just attach GPS and GSM antennas, power supply.</p>
+<p><h3>Note:</h3> GSM antennas are not included in a standart package, however it possible to make a calls near base station as a testing</p>
+<h4><a name="2.1 Getting started"></a>2.1 Getting started<a class="anchorlink" href="#2.1	Getting started"></a></h4>
 <ol>
 <li>
-<p>&#8226 Unwrap UmSITE. Devices comes already installed, which means you only need to attach the antenna, connect to power source and turn it on. LED on the front pannel will flashing in 1-2 minutes after turned on.</p>
+<p>&#8226 Connect to power source and turn it on. LED on the front pannel will flashing in 1-2 minutes later turned on.</p>
 </li>
 <li>
 <p>&#8226 Make sure that Ethernet cable connected.</p>
 </li>
+
+<p><h3>Note:</h3>We strongly recommend does not put UmSITE on a public network. Connect it to your local network where is access to Internet through NAT or Firewall. Keep <u>UDP port 1195</u> open on your server for fairwaves VPN in case technical support</p>
+<p><img src="http://s019.radikal.ru/i633/1505/04/7e1b573f0b89.png" /></p>
+<p>Take any GSM phone with any SIM card and try to search the network. Network might have a different names such as <u>Fairwaves, 1011, Test, etc.</u></p>
+<h4><a name="2.2 Test call"></a>2.2 Test call<a class="anchorlink" href="#2.2 Test call"></a></h4>
+<h4>Searching for the Network</h4>
+<ol>
 <li>
-<p>&#8226 Now you can check if it works properly, take any GSM phone with any SIM card and try to connect to a new network. To search for your network go to setting / networks on your phone and choose one which is could have different names like <em>Fairwaves, 1 01, Test, etc</em>.</p>
+<p> Launch the “Settings” from the menu system.</p>
+</li>
+<li>
+<p>1. Select “More.”</p>
+</li>
+<li>
+<p>2. Select “Mobile networks.”</p>
+</li>
+<li>
+<p>3. Select “Network operators.” </p>
+</li>
+<li>
+<p>4. Select “Search networks.”</p>
 </li>
 </ol>
-<h4>Here are a couple features you should try to make sure that everything works properly:</h4>
+<p><img src="http://s61.radikal.ru/i171/1505/07/60f9ce0b5a97.png" /></p>
+<p><strong>Options:</strong>
+</p>
 <ul>
 <li>
-<p>&#8226 Dial test numbers to check the voice service: 1001 to listen to some music, 1002 to listen to yourself (echo). </p>
+<p>&#8226 1002 - echo call (listen yourself) </p>
 </li>
 <li>
-<p>&#8226 Dial *#100# to figure the number that was assigned to your phone.
-</p>
-</li>
-<li>
-<p>&#8226 Connect another phone in the same manner and check if you can initiate calls and messages between the two phones.
+<p>&#8226 *#100# - to figure out the number that was assigned to your phone.
 </p>
 </li>
 </ul>
-<h4><a name="2.2 Log in"></a>2.2 Log in<a class="anchorlink" href="#2.2	Log in"></a></h4>
-<p>In order to configure and administer the UmSITE, you have to login into device remotely over SSH.
-</p>
-<p>Connect laptop to the UmSITE via Ethernet cable.</p>
-<h6>Note:</h6>
-<p>Before startng to work with the device, set up IP address on laptop like this <strong>192.168.50.200</strong>
+<h4><a name="2.3 Log in"></a>2.3 Log in<a class="anchorlink" href="#2.3	Log in"></a></h4>
+
+
+<p>In order to configure <strong>UmSITE</strong>, you have to login into device remotely over SSH. Interface configured to obtain IP address via DHCP and also has a static <u>192.168.50.100</u></p>
+<p>Connect laptop to the UmDESK/UmSITE via Ethernet cable.</p>
+<p><h3>NOTE:</h3> Make sure your interface in the same subnet as the UmSITE/UmDESK and has IP like <u>192.168.50.101</u>
 </p>
 <ol>
 <li>1. Run PuTTY
 </li>
-<li>2. Type IP address: <strong>192.168.50.100</strong>
+<li>2. Type IP address: 192.168.50.100
 </li>
 <li>Login: fairwaves</li>
 <li>Password: fairwaves</li>
 </ol>
-<p>Once you have logged into the system, you will be at a Linux shell command prompt. </p>
-<p>You may use a deferent client software for remote access, but we recommend <strong>PuTTY</strong> (you can download at <a href="www.putty.org" title="PuTTY">www.putty.org</a> ).  PuTTY is an open source SSH and telnet client, for the Windows platform. </p>
-<h4>Login over Serial cable</h4>
-<p>Serial connection gives you ability to look over the system on the loading level of operation system if something went wrong. </p>
+<p>Once you logged in, you will get access to Linux terminal. </p>
+<p>You may use a deferent client software for remote access, but we recommend <strong>PuTTY</strong> (you can download at <a href="www.putty.org" title="PuTTY"><strong>www.putty.org</strong></a> ).  PuTTY is an open source SSH and telnet client, for the Windows platform. </p>
+<h4>Login over Serial cable (Only for UmSITE)</h4>
+<p>Serial connection allows  you to look over the system on the booting level.</p>
 <p>You'll get options like:</p>
+<ol>
 <ol>
 <li>1. Advanced options for Ubuntu</li>
 <li>2. Test RAM memory</li>
 </ol>
-<p><img src="http://s017.radikal.ru/i443/1503/23/6b5a8596dac4.jpg" /></p>
-<p>First of all you have to use <strong>USB Serial Adapter</strong> for the connection (which is not included in a standard UmSITE package).</p>
-<p>For the Windows user use <a href="www.putty.org" title="PuTTY"><strong>putty</strong></a> </p>
+<p>First of all you have to use <a href="http://www.ebay.com/sch/i.html?_from=R40&_trksid=p2050601.m570.l1311.R1.TR11.TRC1.A0.H2.Xusb+serial+a.TRS0&_nkw=usb+serial+adapter&_sacat=0">USB Serial Adapter</a> for the connection (which is not included in a standard UmSITE package).</p>
+<p><img src="http://s017.radikal.ru/i422/1505/62/53fa6e8aaad9.jpg" /></p>
+<p>For the Windows user <a href="www.putty.org" title="PuTTY"><strong>putty</strong></a> </p>
 <p><img src="http://s017.radikal.ru/i413/1503/ad/0b02ea2dc90f.png" /></p>
-<p>Number of the COM port you will be able to find it in the  <strong>Desktop manager</strong> when you are connecting to the laptop. </p>
+<p>Number of the COM port available at <u>Desktop manager</u> when you are connecting to the laptop. </p>
 <p>For the Linux user <strong><a href="http://www.cyberciti.biz/tips/connect-soekris-single-board-computer-using-minicom.html">minicom</a></strong></p>
 <p>Run this command to connect via serial cabel:</p>
 <pre><code>shell&gt; minicom -D/dev/ttyUSB0 -b38400 -o
 </code></pre>
 
-<h4><a name="2.3 IP and network configuration (optional)"></a>2.3 IP and network configuration (optional)<a class="anchorlink" href="#2.3 IP and network configuration (optional)"></a></h4>
-<p>If you would like to set another static address for the device, edit </p>
-<p><em>/etc/network/</em>interfaces  file:</p>
+<h4><a name="2.4 IP and network configuration (optional)"></a>2.4 IP and network configuration (optional)<a class="anchorlink" href="#2.4 IP and network configuration (optional)"></a></h4>
+<p>If you would like to set another static address for the device, edit  <u>/etc/network/interfaces</u></p>
 <pre><code>Shell&gt; sudo nano /etc/network/interfaces
 </code></pre>
 
-<p>Refer to Ubuntu documentation <a href="www.help.ubuntu.com/14.04/serverguide/network-configuration.html"><strong>UBUNTU</strong></a> for details
+<p>Refer to <a href="https://help.ubuntu.com/14.04/ubuntu-help/index.html"><strong>Ubuntu</strong></a> documentation for details
 </p>
+
+<p><h3>Note:</h3> Base station configured to get IP address through DHCP.
+We also recommend to keep configuration for the
+<u>eth1:1</u> (192.168.50.50/24), because it's used as a backup IP address. If you
+want to configure a statis IP address, change <u>eth1</u> configuration.</p>
 
 </body>
 </html>
