--- a/soft_conf.html
+++ b/soft_conf.html
@@ -1010,7 +1010,7 @@ add a newly created gateway without restarting the entire profile is:</p>
 <pre><code>    freeswitch@internal&gt; /exit
 </code></pre>
 
-<h4>FreeSWITCH Traces</h4>
+<h4>3.2 FreeSWITCH Traces</h4>
 <p>For the calls tracing:</p>
 <p>Run <strong>fs_cli</strong></p>
 <pre><code>    shell&gt; ./fs_cli
@@ -1022,7 +1022,7 @@ add a newly created gateway without restarting the entire profile is:</p>
 
 <p>Logs show up when the calls will be made.</p>
 
-<h4>3.2 Codecs in FreeSWITCH</h4>
+<h4>3.3 Codecs in FreeSWITCH</h4>
 <p>FreeSWITCH supports a large number of VoIP compression codecs. </p>
 <pre><code>type,name,ikey
 codec,ADPCM (IMA),mod_spandsp
