--- a/umsite.html
+++ b/umsite.html
@@ -371,6 +371,7 @@ img {
 <li>&#8226 Multi-ARFCN on each TRX (beta)
 </li>
 <li>&#8226 10W per channel (2x10W)</li>
+<li>&#8226 Real time power control via VTY</li>
 </ul>
 <h4>Reference Clock</h4>
 <ul>
@@ -399,7 +400,7 @@ img {
 <h4>Power supply</h4>
 <p>Fairwaves does not provide the power supply. This is because, different places use different power sources. Fairwaves products compatible with any power sources including solar panels as well.	 </p>
 <h4>Antenna</h4>
-<p>Faiwaves does not provide an antenna. You can use any other antenna suitable for 850/900/1800/1900 GSM frequency band.</p>
+<p>Faiwaves does not provide an antenna. You can use any other antenna suitable for 850/900/1800/1900 GSM frequency band with N-male connectors</p>
 <h4><a name="1.2 Software specification"></a>1.2 Software specification<a class="anchorlink" href="#1.2 Software specification"></a></h4>
 <br>
 <h4>Number of Transceivers</h4>
